# recapn

./: Cargo.toml  README.md  rust-toolchain  rusty-hook.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
doc/: todo.md
doc/design/: recapn-rpc.md  recapn.md  recapnc.md
examples/addressbook/: Cargo.toml  build.rs
examples/addressbook/capnp/: addressbook.capnp
examples/addressbook/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  build.rs  run.sh
fuzz/fuzz_targets/: read-all-types.rs  unpacking.rs
fuzz/schemas/: fuzz.capnp
fuzz/src/: lib.rs
recapn/: Cargo.toml
recapn-channel/: Cargo.toml
recapn-channel/src/: lib.rs  mpsc.rs  request.rs  test.rs  util.rs
recapn-channel/src/util/: atomic_state.rs  closed_task.rs  linked_list.rs  wait_list.rs
recapn-rpc/: Cargo.toml  build.rs
recapn-rpc-core/: Cargo.toml
recapn-rpc-core/src/: client.rs  connection.rs  lib.rs  table.rs
recapn-rpc-core/src/client/: local.rs
recapn-rpc-core/src/sync/: mpsc.rs  request.rs  sharedshot.rs  util.rs
recapn-rpc-core/src/sync/util/: array_vec.rs  linked_list.rs
recapn-rpc/src/: chan.rs  client.rs  connection.rs  lib.rs  pipeline.rs  rt.rs  server.rs  system.rs  table.rs  tokio.rs  twoparty.rs
recapn-rpc/src/client/: error.rs  local.rs  queue.rs
recapn-rpc/src/sync/: mod.rs  mpsc.rs  request.rs  sharedshot.rs  test.rs  util.rs
recapn-rpc/src/sync/util/: array_vec.rs  atomic_state.rs  closed_task.rs  linked_list.rs  wait_list.rs  wake_list.rs
recapn-sys/: Cargo.toml  README.md  build.rs
recapn-sys/src/: lib.rs
recapn/src/: alloc.rs  any.rs  arena.rs  data.rs  field.rs  io.rs  lib.rs  list.rs  message.rs  num.rs  orphan.rs  ptr.rs  rpc.rs  text.rs  ty.rs
recapn/src/io/: packing.rs  stream.rs
recapn/tests/: test_capnp.rs
recapnc/: Cargo.toml  build.rs
recapnc/src/: bin.rs  generator.rs  lib.rs  quotes.rs  schema.rs
recapnc/src/generator/: ident.rs
tests/: Cargo.toml  build.rs
tests/schemas/: test.capnp
tests/schemas/build_rs/: bar.capnp  build.capnp
tests/schemas/capnp/: stream.capnp
tests/schemas/missing_annotation/: annotate.capnp  foo.capnp
tests/src/: lib.rs  list.rs
