[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.recapn]
path = "../recapn"

[[bin]]
name = "unpacking"
path = "fuzz_targets/unpacking.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read-all-types"
path = "fuzz_targets/read-all-types.rs"
test = false
doc = false
bench = false

[build-dependencies]
recapnc = { path = "../recapnc" }