[package]
name = "recapn-rpc"
version = "0.0.0"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2021"

[dependencies]
recapn = { path = "../recapn" }
fnv = "1.0"
tokio = { version = "1.35", default-features = false, features = ["rt", "macros", "sync"] }
pin-project = "1.1"
parking_lot = "0.12"
hashbrown = "0.14"
scopeguard = "1.2"

[dev-dependencies]
tokio-test = "0.4"
assert_matches2 = "0.1"