[package]
name = "recapn-rpc"
version = "0.0.0"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2021"

[dependencies]
recapn = { path = "../recapn" }
fnv = "1"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync"] }
pin-project = "1"
parking_lot = "0"
hashbrown = "0"
scopeguard = "1"

[dev-dependencies]
tokio-test = "0"
assert_matches2 = "0"

[lints]
workspace = true
