[package]
name = "recapn-rpc"
version = "0.0.0"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2021"

[dependencies]
recapn = { path = "../recapn" }
recapn-channel = { path = "../recapn-channel" }
fnv = "1.0"
tokio = { version = "1.35", default-features = false, features = ["rt", "macros", "sync"] }
pin-project = "1.1"
hashbrown = "0.14"

[build-dependencies]
recapnc = { path = "../recapnc" }

[lints]
workspace = true
