[package]
name = "recapnc"
version = "0.0.0"
description = "The recapn library Cap'n Proto code generator"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2021"

[dependencies]
recapn = { path = "../recapn", features = [] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
thiserror = "1"
unicode-ident = "1"
heck = "0"
prettyplease = "0"

[lints]
workspace = true

