[package]
name = "recapnc"
version = "0.0.0"
description = "The recapn library Cap'n Proto code generator"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2021"

[dependencies]
recapn = { path = "../recapn", features = [] }
recapn-sys = { path = "../recapn-sys"}
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "1.0"
unicode-ident = "1.0"
heck = "0.4"
prettyplease = "0.2"

[lints]
workspace = true

